# fuzbai-simulation

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.full  Dockerfile.minimal  README.md  about.hbs  about.toml  build_linux.sh  build_macos.sh  build_mujoco.sh  build_mujoco_static.sh  build_rust.sh  build_windows.ps1  compile_model.py  fetch_mujoco_linux.sh  fetch_mujoco_macos.sh  fetch_mujoco_windows.ps1  requirements_py.txt  setup_linux.sh  setup_macos.sh  setup_windows.ps1
.cargo/: config.toml
.github/: copilot-instructions.md
.github/rules/: coding-style.instructions.md  rules-loading.instructions.md  session-end.instructions.md
.github/skills/build-project/: SKILL.md
.github/skills/comprehensive-code-review/: SKILL.md
demo-fuzbai-agent/: Cargo.toml
demo-fuzbai-agent/src/: lib.rs  rod.rs  timer.rs
examples/Python/: http_client.py
examples/Rust/http_client/: Cargo.toml
examples/Rust/http_client/src/: main.rs
examples/http/Python/: http_client.py  http_latency_benchmark.py  requirements.txt
examples/http/Rust/http_latency_benchmark/: Cargo.toml
examples/http/Rust/http_latency_benchmark/src/: main.rs
examples/stepping/Python/: stepping.py
examples/stepping/Rust/: Cargo.toml
examples/stepping/Rust/src/: main.rs
examples/zone-drawing/Rust/: Cargo.toml
examples/zone-drawing/Rust/src/: main.rs
models/: ground-texture.drawio  igralec_spodaj.stl  igralec_zgoraj.stl  ld_bump.stl  lu_bump.stl  miza.xml  rd_bump.stl  ru_bump.stl  wedge_bottom1.stl  wedge_bottom2.stl  wedge_upper1.stl  wedge_upper2.stl
mujoco-model-compiler/: Cargo.toml
mujoco-model-compiler/src/: main.rs
mujoco_rust/: Cargo.toml  build.rs
mujoco_rust/examples/: launch_passive_threaded.rs
mujoco_rust/src/: lib.rs  mujoco_c.rs  util.rs  viewer.rs  wrappers.rs
mujoco_rust/src/wrappers/: mj_auxilary.rs  mj_data.rs  mj_model.rs  mj_rendering.rs  mj_visualization.rs
simulation/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  compile_model.py  fuzbai_simulator.pyi  pyproject.toml
simulation-app/: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
simulation-app/examples/camera_state/: Cargo.toml
simulation-app/examples/camera_state/src/: main.rs
simulation-app/examples/http_client_rust/: Cargo.toml
simulation-app/src/: competition.rs  http.rs  main.rs  traits.rs
simulation-app/www/: NOTICE.txt
simulation/examples/: stepping.rs
simulation/examples/python/: stepping.py
simulation/fuzbai_simulator/: __init__.py
simulation/src/: constant.rs  lib.rs  miza_tmp.mjb  motors.rs  render.rs  types.rs
