# Common workspace for simulation and the simulation application.
# This workspace exists for allowing a single Cargo.lock to be used for both subpackages.
# Build with cargo build --release -p <package name>

[workspace]
resolver = "3"
members = ["simulation-app", "simulation"]
exclude = ["examples"]

# A hack for MacOS (the fix code is not yet merged). Do not enable on Linux or Windows.
# [patch.crates-io]
# glutin = {git = "https://github.com/kalzoo/glutin.git", rev = "0aab9ae61981dae86ea897fc53001f345f656ada"}
