[package]
name = "simulation-app"
version = "0.2.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
egui_extras = { version = "0.33.3", default-features = false, features = ["image", "http"] }
fuzbai_simulator = { version = "3.7.0", path = "../simulation" }
image = { version = "0.25.9", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
