[package]
name = "simulation-app"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
egui_extras = { version = "0.33.3", default-features = false, features = ["image", "http"] }
fuzbai_simulator = { version = "4.1.0", path = "../simulation" }
image = { version = "0.25.9", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
utoipa = { version = "5.4.0", features = ["macros"] }
