[package]
name = "fuzbai_simulator"
version = "3.7.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
python-bindings = ["dep:pyo3"]

[dependencies]
pyo3 = {version = "0.24.2", features = ["extension-module", "abi3-py38"], optional = true}
agent_rust = {path = "../fuzbai-agent/"}
rand = "0.9.1"
mujoco-rs = "2.1.1"
[build-dependencies]
mujoco-rs = {version = "2.1.1", default-features = false}

[profile.release]
opt-level = 3
lto = "fat"
