[package]
name = "fuzbai_simulator"
version = "4.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
python-bindings = ["dep:pyo3"]

[dependencies]
pyo3 = {version = "0.24.2", features = ["extension-module", "abi3-py38"], optional = true}
demo-fuzbai-agent = {path = "../demo-fuzbai-agent/"}
rand = "0.9.1"
mujoco-rs = { version = "2.3.4", default-features = false, features = ["viewer", "viewer-ui"] }
