[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "fuzbai_simulator"
requires-python = ">=3.11"
authors = [
  {name = "David Hožič", email = "davidhozic@gmail.com"},
  {name = "Matevž Bošnak"},
]
readme="../README.md"
keywords=["python", "rust", "reinforcement learning", "simulation", "mujoco", "table-football"]
repository = "https://github.com/davidhozic/fuzbai-simulation"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
]

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux_2_35"
features = ["python-bindings"]
include = ["fuzbai_simulator/mujoco.dll"]
