[package]
name = "camera_state"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["json", "blocking"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
